Add styling for messages and increase status sizes.
This change includes coloration for messages (via message-fg and message-bg).
Secondly this change updates the status-left-length and status-right-length to
allow for more content on those sides of the status bar.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,22 +20,27 @@ bind-key Right select-pane -R
 # Extend message display time.
 set-option -g display-time 2000
 
-
 # Status left.
+set-option -g status-left-length 20
 set-option -g status-left '#[fg=green][#S] '
 
-# Set time options to be of form "22:13 Sat, Oct 14 2017"
-set-option -g status-right '#[fg=red]"#{=21:pane_title}" #[fg=blue]%H:%M %a, %d %b %Y'
+# Set time options to be of form "22:13 Sat, Oct 14 2017".
+set-option -g status-right '#[fg=red]"#{=40:pane_title}" #[fg=blue]%H:%M %a, %d %b %Y'
 
+set-option -g status-right-length 100
 set-option -g status-style fg=colour136,bg=colour235
 
-# default window title colors
+# default window title colors.
 set-window-option -g window-status-fg colour244  # base0
 set-window-option -g window-status-bg default
 
-# active window title colors
+# active window title colors.
 set-window-option -g window-status-current-fg colour166  # orange
 set-window-option -g window-status-current-bg default
+
+# Message options.
+set-option -g message-fg colour166
+set-option -g message-bg colour235
 
 
 # Vim resurrect strategy.
