Add vi copy-paste support to tmux conf.
Adds vi copy-paste support, making it possible to use vi navigation around the
copy mode, and also allowing the use of 'v' and 'y' for selection and yanking
respectively.

Another minor change is to change the status bar colors to be brighter.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,6 +17,11 @@ bind-key Down select-pane -D
 bind-key Left select-pane -L
 bind-key Right select-pane -R
 
+# Vi copypaste mode.
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection
+
 # Extend message display time.
 set-option -g display-time 2000
 
@@ -25,7 +30,7 @@ set-option -g status-left-length 20
 set-option -g status-left '#[fg=green][#S] '
 
 # Set time options to be of form "22:13 Sat, Oct 14 2017".
-set-option -g status-right '#[fg=red]"#{=40:pane_title}" #[fg=blue]%H:%M %a, %d %b %Y'
+set-option -g status-right '#[fg=brightred]"#{=40:pane_title}" #[fg=brightblue]%H:%M %a, %d %b %Y'
 
 set-option -g status-right-length 100
 set-option -g status-style fg=colour136,bg=colour235
