--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,16 +36,16 @@ set-option -g status-right-length 100
 set-option -g status-style fg=colour136,bg=colour235
 
 # default window title colors.
-set-window-option -g window-status-fg colour244  # base0
-set-window-option -g window-status-bg default
+set-window-option -g window-status-style fg=colour244  # base0
+set-window-option -g window-status-style bg=default
 
 # active window title colors.
-set-window-option -g window-status-current-fg colour166  # orange
-set-window-option -g window-status-current-bg default
+set-window-option -g window-status-current-style fg=colour166  # orange
+set-window-option -g window-status-current-style bg=default
 
 # Message options.
-set-option -g message-fg colour166
-set-option -g message-bg colour235
+set-option -g message-style fg=colour166
+set-option -g message-style bg=colour235
 
 
 # Vim resurrect strategy.
