--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,15 +37,15 @@ set-option -g status-style fg=colour136,bg=colour235
 
 # default window title colors.
 set-window-option -g window-status-style fg=colour244  # base0
-set-window-option -g window-status-style bg=default
+set-window-option -ga window-status-style bg=default
 
 # active window title colors.
 set-window-option -g window-status-current-style fg=colour166  # orange
-set-window-option -g window-status-current-style bg=default
+set-window-option -ga window-status-current-style bg=default
 
 # Message options.
 set-option -g message-style fg=colour166
-set-option -g message-style bg=colour235
+set-option -ga message-style bg=colour235
 
 
 # Vim resurrect strategy.
